data/derived/fa15/progs/unify/prog3708.ml.out
Characters 96-102:
  | Sine sine		    -> sin(sine)
                         ^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
